--- a/GroceryDelivery/package.json
+++ b/GroceryDelivery/package.json
@@ -20,7 +20,10 @@
   },
   "dependencies": {
     "expo": "^21.0.0",
+    "express": "^4.16.2",
+    "mongoose": "^4.12.3",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.48.4"
+    "react-native": "^0.48.4",
+    "sequelize": "^4.14.0"
   }
 }
