--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-beta.5",
-		"react-native": "0.49.3"
+		"react-native": "0.49.3",
+		"react-native-socketio": "^0.3.0",
+		"socket.io-client": "^2.0.3"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
