--- a/client/android/app/src/main/AndroidManifest.xml
+++ b/client/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -16,6 +17,9 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
+      <meta-data
+                android:name="com.google.android.maps.v2.API_KEY"
+                android:value="AIzaSyCvwlW0AEXq2Rwgl3jZOtXB6JNXWbaHKlk"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
