--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
-    "react-native-app-intro": "^1.1.5",
-    "react-native-camera": "^0.6.0"
+    "react-native-maps": "^0.17.1"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
