--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "dependencies": {
     "express": "^4.16.2",
     "mongoose": "^4.12.4"
+  },
+  "devDependencies": {
+    "eslint": "^4.9.0",
+    "eslint-plugin-react": "^7.4.0"
   }
 }
