--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.3.3",
     "react": "16.0.0-beta.5",
+    "react-gif": "^0.1.0",
     "react-native": "0.49.3",
-    "react-native-maps": "^0.17.1"
+    "react-native-elements": "^0.17.0",
+    "react-native-maps": "^0.17.1",
+    "react-native-tab-navigator": "^0.3.4",
+    "react-navigation": "^1.0.0-beta.15"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
