--- a/Agent/package.json
+++ b/Agent/package.json
@@ -8,17 +8,13 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-beta.5",
-<<<<<<< HEAD
 		"react-native-google-maps-directions": "^1.1.2",
-=======
-		"react-native": "0.49.5",
->>>>>>> Collect all folders togother
 		"react-native-maps": "^0.17.1"
-
 		"react-native": "0.49.3",
 		"react-native-socketio": "^0.3.0",
 		"socket.io-client": "^2.0.3"
-
+		"react-native-maps": "^0.17.1",
+		"react-native-side-menu": "^1.1.3"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
