--- a/Agent/android/app/src/main/AndroidManifest.xml
+++ b/Agent/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="22" />
@@ -16,9 +18,6 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
-      <meta-data
-        android:name="com.google.android.maps.v2.API_KEY"
-        android:value="AIzaSyCvwlW0AEXq2Rwgl3jZOtXB6JNXWbaHKlk"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
