--- a/Agent/package.json
+++ b/Agent/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"react": "16.0.0-beta.5",
 		"react-native": "0.49.3",
+		"react-native-elements": "^0.17.0",
 		"react-native-google-maps-directions": "^1.1.2",
 		"react-native-maps": "^0.17.1",
 		"react-native-side-menu": "^1.1.3"
