--- a/Agent/package.json
+++ b/Agent/package.json
@@ -7,10 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.3.3",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.5",
+    "react-native-elements": "^0.18.1",
     "react-native-maps": "^0.17.1",
-    "react-native-push-notification": "^3.0.1"
+    "react-native-push-notification": "^3.0.1",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
