--- a/Consumer/android/app/build.gradle
+++ b/Consumer/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-push-notification')
     compile project(':react-native-maps')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
@@ -148,6 +149,10 @@ dependencies {
     compile 'com.google.android.gms:play-services-base:10.0.1'
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile project(':react-native-vector-icons') // Check if not nessarry
+     compile project(':react-native-push-notification')
+    compile ('com.google.android.gms:play-services-gcm:10.0.1') {
+        force = true;
+    }
 }
 
 // Run this once to be able to run the application with BUCK
