--- a/Consumer/package.json
+++ b/Consumer/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.49.3",
     "react-native-elements": "^0.17.0",
     "react-native-maps": "^0.17.1",
+    "react-native-push-notification": "^3.0.1",
     "react-navigation": "^1.0.0-beta.15",
     "socket.io": "^2.0.4"
   },
