--- a/Agent/android/app/build.gradle
+++ b/Agent/android/app/build.gradle
@@ -147,10 +147,16 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-push-notification')
+    compile project(':react-native-maps')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':react-native-push-notification')
+   compile ('com.google.android.gms:play-services-gcm:10.0.1') {
+       force = true;
+   }
 }
 
 // Run this once to be able to run the application with BUCK
