--- a/Agent/package.json
+++ b/Agent/package.json
@@ -12,9 +12,11 @@
 		"react-native-elements": "^0.17.0",
 		"react-native-google-maps-directions": "^1.1.2",
 		"react-native-maps": "^0.17.1",
+		"react-native-push-notification": "^3.0.1",
 		"react-native-side-menu": "^1.1.3",
 		"react-native-vector-icons": "^4.4.2",
-		"react-navigation": "^1.0.0-beta.17"
+		"react-navigation": "^1.0.0-beta.17",
+		"socket.io": "^2.0.4"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
